--- a/.github/workflows/workflowdis.yaml
+++ b/.github/workflows/workflowdis.yaml
@@ -9,14 +9,17 @@ jobs:
 
     steps:
 
-      - name: Trigger workflow file
-        uses: actions/github-script@v6
-        with:
-        github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        script: |
-            await github.rest.actions.createworkflowDispatch({
-                owner: 'dittojoseph',
-                repo: 'scripted-pipeline-demo',
-                workflow_id: 'deploy.yml',
-                ref: 'master'
-            }) 
+      - name: Echo Workflow name
+
+        shell: bash
+
+        run: |
+
+          curl -L \
+  -X POST \
+  -H "Accept: application/vnd.github+json" \
+  -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }} " \
+  -H "X-GitHub-Api-Version: 2022-11-28" \
+  https://api.github.com/repos/dittojoseph/scripted-pipeline-demo/actions/workflows/deploy.yaml/dispatches \
+
+  -d '{"ref":"master"}'
