--- a/.github/workflows/workflowdis.yaml
+++ b/.github/workflows/workflowdis.yaml
@@ -3,17 +3,19 @@ on:
   workflow_dispatch:
     branches:
       - master
+
 jobs:
-  trigger_workflow:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    run: |
-    curl -L \
-   -X POST \
-   -H "Accept: application/vnd.github+json" \
-   -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
-   -H "X-GitHub-Api-Version: 2022-11-28" \
-   https://api.github.com/repos/dittojoseph/scripted-pipeline-demo/actions/workflows/deploy.yaml/dispatches \
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: API Calling
+        run: |
+          curl -X POST   https://api.github.com/repos/dittojoseph/scripted-pipeline-demo/actions/workflows/deploy.yaml/dispatches \
+          -H "Accept: application/vnd.github.everest-preview+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          
+          -H "Authorization: Bearer ${{ secrets.PERSONAL_ACCESS_TOKEN }}" \
 
-   -d '{"ref":"master"}' 
+          -d '{"ref": "master"}
