--- a/.github/workflows/workflowdis.yaml
+++ b/.github/workflows/workflowdis.yaml
@@ -1,21 +1,18 @@
-name:  API CICD
+name:  API CI/CD
 on:
   workflow_dispatch:
     branches:
       - master
-
 jobs:
-  build:
     runs-on: ubuntu-latest
-
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: API Calling
-        run: |
-          curl -X POST   https://api.github.com/repos/dittojoseph/scripted-pipeline-demo/actions/workflows/deploy.yaml/dispatches \
-          -H "Accept: application/vnd.github.everest-preview+json" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          
-          -H "Authorization: Bearer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 " \
-
-          -d '{"ref": "master"}
+      - uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          script: |
+            await github.rest.actions.createworkflowDispatch({
+                owner: 'dittojoseph',
+                repo: 'scripted-pipeline-demo',
+                workflow_id: 'deploy.yaml',
+                ref: 'master'
+            }) 
