--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,9 +1,10 @@
-name:  API
+name:  API CI/CD
 on:
   workflow_dispatch:
     branches:
       - master
 jobs:
+    build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v7
