--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -5,15 +5,17 @@ on:
       - master
 jobs:
     build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+    
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/github-script@v7
+          with:
+            github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           script: |
             await github.rest.actions.createworkflowDispatch({
-                owner: 'dittojoseph',
-                repo: 'scripted-pipeline-demo',
-                workflow_id: 'deploy.yaml',
-                ref: 'master'
-            }) 
+
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['Triage']
+            })
