--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,21 +1,19 @@
-name:  API CI/CD
+name: API CICD
 on:
-  workflow_dispatch:
+  workflow_dispatch: 
     branches:
       - master
 jobs:
-    build:
-    
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/github-script@v7
-          with:
-            github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           script: |
             await github.rest.actions.createworkflowDispatch({
-
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              labels: ['Triage']
+              owner: dittojoseph,
+              repo:scripted-pipeline-demo,
+              workflow_id: deploy.yaml,
+              ref: master
             })
