--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -12,8 +12,8 @@ jobs:
           github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           script: |
             await github.rest.actions.createworkflowDispatch({
-              owner: dittojoseph,
-              repo:scripted-pipeline-demo,
-              workflow_id: deploy.yaml,
-              ref: master
+              owner: 'dittojoseph',
+              repo: 'scripted-pipeline-demo',
+              workflow_id: 'deploy.yaml',
+              ref: 'master'
             })
