--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,19 +1,20 @@
-name: API CICD
+name: Create Workflow Dispatch
+
 on:
-  workflow_dispatch: 
-    branches:
-      - master
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v6
+      - name: Trigger Workflow
+        uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           script: |
-            await github.rest.actions.createworkflowDispatch({
-              owner: 'dittojoseph',
-              repo: 'scripted-pipeline-demo',
-              workflow_id: 'deploy.yaml',
-              ref: 'master'
+            github.rest.actions.createWorkflowDispatch({
+              owner: dittojoseph,
+              repo: scripted-pipeline-demo,
+              workflow_id: 'deploy.yml',
+              ref: 'master',
             })
