--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,5 +26,8 @@ jobs:
           repo: scripted-pipeline-demo
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           github_user: github-user
+          trigger_workflow: true
+          wait_interval: 20
+          propagate_failure: true
           workflow_file_name: deploy.yaml
           ref: master
